# FastAPI-Template

./: .env.example  .gitignore  README.md  dev.db  pyproject.toml  test.db
app/: app.py  main.py  schemas.py  users.py
app/api/: api.py  deps.py
app/api/routes/: auth.py  posts.py  users.py
app/api/v1/: api.py
app/api/v1/endpoints/: auth.py  posts.py  users.py
app/core/: config.py  db.py
app/models/: __init__.py  base_model.py  post.py  user.py
app/schemas/: __init__.py  post.py
