[project]
name = "ylsh-backend"
version = "0.1.0"
description = "Modern FastAPI backend with best practices"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.108.0",
    "uvicorn[standard]>=0.25.0",
    "pydantic>=2.5.2",
    "pydantic-settings>=2.1.0",
    "sqlmodel>=0.0.14",
    "alembic>=1.13.0",
    "loguru>=0.7.3",
]

[tool.uv]
dev-dependencies = [
    "pytest-asyncio>=0.23.2",
    "httpx>=0.25.2",
    "ruff>=0.1.6",
    "mypy>=1.7.1",
    "pytest>=8.3.4",
]

[tool.ruff]
select = ["E", "F", "B", "I"]
target-version = "py312"
exclude = ["alembic"]
line-length = 100

[tool.mypy]
python_version = "3.12"
strict = true
exclude = ["venv", ".venv", "alembic"]
plugins = ["pydantic.mypy"]

[tool.uv.workspace]
members = ["git"]
