[project]
name = "YLSK-Backend"
version = "0.1.0"
description = "Modern FastAPI backend with best practices"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.108.0",
    "uvicorn[standard]>=0.25.0",
    "pydantic>=2.5.2",
    "pydantic-settings>=2.1.0",
    "sqlmodel>=0.0.14",
    "alembic>=1.13.0",
    "loguru>=0.7.3",
    "fastapi-users[oauth,sqlalchemy]>=14.0.0",
    "pwdlib>=0.2.1",
    "aiosqlite>=0.20.0",
]

[tool.uv]
index-url = "https://pypi.org/simple"
dev-dependencies = [
    "pytest-asyncio>=0.23.2",
    "httpx>=0.25.2",
    "mypy>=1.7.1",
    "pytest>=8.3.4",
    "ruff>=0.8.2",
]


[tool.ruff]
target-version = "py313"
exclude = ["alembic"]
line-length = 100
indent-width = 4
fix = true

[tool.ruff.lint]
select = ["F", "E", "N", "I", "FAST"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.13"
strict = true
exclude = ["venv", ".venv", "alembic"]
plugins = ["pydantic.mypy"]

[tool.uv.workspace]
members = ["git"]
